<resources>
    <string name="app_name">SampleDataBinding</string>
    <string name="label_name">Name</string>
    <string name="placeholder_name">Tom</string>
    <string name="label_lastName">Last name</string>
    <string name="placeholder_lastName">Brown</string>
    <string name="description_profile_avatar">Profile\'s avatar</string>
    <string name="label_likes">Likes</string>
    <string name="placeholder_likes">5</string>
    <string name="like_button">Like</string>
</resources>